src/inmantaParser.py
# Generated from inmanta.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class inmantaParser ( Parser ):

    grammarFileName = "inmanta.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'typedef'", "'as'", "'matching'", "'entity'", 
                     "'extends'", "','", "':'", "'end'", "'implementation'", 
                     "'for'", "'index'", "'('", "')'", "'implement'", "'using'", 
                     "'when'", "'<-'", "'->'", "'--'", "'['", "']'", "'in'", 
                     "'='", "'::'", "'.'", "'not'", "'=='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'", "'and'", "'or'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TRUE", "FALSE", 
                      "ID", "CLASS_ID", "INT", "FLOAT", "COMMENT", "WS", 
                      "ML_STRING", "STRING", "REGEX" ]

    RULE_main = 0
    RULE_def_statement = 1
    RULE_typedef = 2
    RULE_entity_def = 3
    RULE_implementation_def = 4
    RULE_index = 5
    RULE_implement_def = 6
    RULE_relation_end = 7
    RULE_relation_link = 8
    RULE_multiplicity_body = 9
    RULE_multiplicity = 10
    RULE_relation = 11
    RULE_top_statement = 12
    RULE_implementation = 13
    RULE_statement = 14
    RULE_parameter = 15
    RULE_constructor = 16
    RULE_param_list = 17
    RULE_operand = 18
    RULE_constant = 19
    RULE_list_def = 20
    RULE_index_arg = 21
    RULE_index_lookup = 22
    RULE_entity_body = 23
    RULE_ns_ref = 24
    RULE_class_ref = 25
    RULE_variable = 26
    RULE_arg_list = 27
    RULE_call = 28
    RULE_function_call = 29
    RULE_un_op = 30
    RULE_cmp_op = 31
    RULE_cmp = 32
    RULE_log_op = 33
    RULE_in_oper = 34
    RULE_log_oper = 35
    RULE_log_expr = 36
    RULE_expression = 37

    ruleNames =  [ "main", "def_statement", "typedef", "entity_def", "implementation_def", 
                   "index", "implement_def", "relation_end", "relation_link", 
                   "multiplicity_body", "multiplicity", "relation", "top_statement", 
                   "implementation", "statement", "parameter", "constructor", 
                   "param_list", "operand", "constant", "list_def", "index_arg", 
                   "index_lookup", "entity_body", "ns_ref", "class_ref", 
                   "variable", "arg_list", "call", "function_call", "un_op", 
                   "cmp_op", "cmp", "log_op", "in_oper", "log_oper", "log_expr", 
                   "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    TRUE=35
    FALSE=36
    ID=37
    CLASS_ID=38
    INT=39
    FLOAT=40
    COMMENT=41
    WS=42
    ML_STRING=43
    STRING=44
    REGEX=45

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def def_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(inmantaParser.Def_statementContext)
            else:
                return self.getTypedRuleContext(inmantaParser.Def_statementContext,i)


        def top_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(inmantaParser.Top_statementContext)
            else:
                return self.getTypedRuleContext(inmantaParser.Top_statementContext,i)


        def ML_STRING(self, i:int=None):
            if i is None:
                return self.getTokens(inmantaParser.ML_STRING)
            else:
                return self.getToken(inmantaParser.ML_STRING, i)

        def getRuleIndex(self):
            return inmantaParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = inmantaParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << inmantaParser.T__0) | (1 << inmantaParser.T__3) | (1 << inmantaParser.T__8) | (1 << inmantaParser.T__9) | (1 << inmantaParser.T__10) | (1 << inmantaParser.T__13) | (1 << inmantaParser.ID) | (1 << inmantaParser.CLASS_ID) | (1 << inmantaParser.ML_STRING))) != 0):
                self.state = 79
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 76
                    self.def_statement()
                    pass

                elif la_ == 2:
                    self.state = 77
                    self.top_statement()
                    pass

                elif la_ == 3:
                    self.state = 78
                    self.match(inmantaParser.ML_STRING)
                    pass


                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Def_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedef(self):
            return self.getTypedRuleContext(inmantaParser.TypedefContext,0)


        def entity_def(self):
            return self.getTypedRuleContext(inmantaParser.Entity_defContext,0)


        def implementation_def(self):
            return self.getTypedRuleContext(inmantaParser.Implementation_defContext,0)


        def relation(self):
            return self.getTypedRuleContext(inmantaParser.RelationContext,0)


        def index(self):
            return self.getTypedRuleContext(inmantaParser.IndexContext,0)


        def implement_def(self):
            return self.getTypedRuleContext(inmantaParser.Implement_defContext,0)


        def getRuleIndex(self):
            return inmantaParser.RULE_def_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDef_statement" ):
                listener.enterDef_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDef_statement" ):
                listener.exitDef_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDef_statement" ):
                return visitor.visitDef_statement(self)
            else:
                return visitor.visitChildren(self)




    def def_statement(self):

        localctx = inmantaParser.Def_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_def_statement)
        try:
            self.state = 90
            token = self._input.LA(1)
            if token in [inmantaParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.typedef()

            elif token in [inmantaParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.entity_def()

            elif token in [inmantaParser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.implementation_def()

            elif token in [inmantaParser.ID, inmantaParser.CLASS_ID]:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.relation()

            elif token in [inmantaParser.T__10]:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.index()

            elif token in [inmantaParser.T__13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.implement_def()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypedefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return inmantaParser.RULE_typedef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DEF_TYPEContext(TypedefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a inmantaParser.TypedefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(inmantaParser.ID, 0)
        def ns_ref(self):
            return self.getTypedRuleContext(inmantaParser.Ns_refContext,0)

        def REGEX(self):
            return self.getToken(inmantaParser.REGEX, 0)
        def expression(self):
            return self.getTypedRuleContext(inmantaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDEF_TYPE" ):
                listener.enterDEF_TYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDEF_TYPE" ):
                listener.exitDEF_TYPE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDEF_TYPE" ):
                return visitor.visitDEF_TYPE(self)
            else:
                return visitor.visitChildren(self)


    class DEF_DEFAULTContext(TypedefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a inmantaParser.TypedefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CLASS_ID(self):
            return self.getToken(inmantaParser.CLASS_ID, 0)
        def constructor(self):
            return self.getTypedRuleContext(inmantaParser.ConstructorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDEF_DEFAULT" ):
                listener.enterDEF_DEFAULT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDEF_DEFAULT" ):
                listener.exitDEF_DEFAULT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDEF_DEFAULT" ):
                return visitor.visitDEF_DEFAULT(self)
            else:
                return visitor.visitChildren(self)



    def typedef(self):

        localctx = inmantaParser.TypedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typedef)
        try:
            self.state = 105
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = inmantaParser.DEF_TYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(inmantaParser.T__0)
                self.state = 93
                self.match(inmantaParser.ID)
                self.state = 94
                self.match(inmantaParser.T__1)
                self.state = 95
                self.ns_ref()
                self.state = 96
                self.match(inmantaParser.T__2)
                self.state = 99
                self._errHandler.sync(self);
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 97
                    self.match(inmantaParser.REGEX)
                    pass

                elif la_ == 2:
                    self.state = 98
                    self.expression()
                    pass


                pass

            elif la_ == 2:
                localctx = inmantaParser.DEF_DEFAULTContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.match(inmantaParser.T__0)
                self.state = 102
                self.match(inmantaParser.CLASS_ID)
                self.state = 103
                self.match(inmantaParser.T__1)
                self.state = 104
                self.constructor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Entity_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return inmantaParser.RULE_entity_def

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DEF_ENTITYContext(Entity_defContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a inmantaParser.Entity_defContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CLASS_ID(self):
            return self.getToken(inmantaParser.CLASS_ID, 0)
        def ML_STRING(self):
            return self.getToken(inmantaParser.ML_STRING, 0)
        def entity_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(inmantaParser.Entity_bodyContext)
            else:
                return self.getTypedRuleContext(inmantaParser.Entity_bodyContext,i)

        def class_ref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(inmantaParser.Class_refContext)
            else:
                return self.getTypedRuleContext(inmantaParser.Class_refContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDEF_ENTITY" ):
                listener.enterDEF_ENTITY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDEF_ENTITY" ):
                listener.exitDEF_ENTITY(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDEF_ENTITY" ):
                return visitor.visitDEF_ENTITY(self)
            else:
                return visitor.visitChildren(self)



    def entity_def(self):

        localctx = inmantaParser.Entity_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_entity_def)
        self._la = 0 # Token type
        try:
            localctx = inmantaParser.DEF_ENTITYContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(inmantaParser.T__3)
            self.state = 108
            self.match(inmantaParser.CLASS_ID)
            self.state = 118
            _la = self._input.LA(1)
            if _la==inmantaParser.T__4:
                self.state = 109
                self.match(inmantaParser.T__4)
                self.state = 110
                self.class_ref()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==inmantaParser.T__5:
                    self.state = 111
                    self.match(inmantaParser.T__5)
                    self.state = 112
                    self.class_ref()
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 120
            self.match(inmantaParser.T__6)
            self.state = 122
            _la = self._input.LA(1)
            if _la==inmantaParser.ML_STRING:
                self.state = 121
                self.match(inmantaParser.ML_STRING)


            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==inmantaParser.ID:
                self.state = 124
                self.entity_body()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(inmantaParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Implementation_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return inmantaParser.RULE_implementation_def

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DEF_IMPLEMENTATIONContext(Implementation_defContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a inmantaParser.Implementation_defContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(inmantaParser.ID, 0)
        def implementation(self):
            return self.getTypedRuleContext(inmantaParser.ImplementationContext,0)

        def class_ref(self):
            return self.getTypedRuleContext(inmantaParser.Class_refContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDEF_IMPLEMENTATION" ):
                listener.enterDEF_IMPLEMENTATION(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDEF_IMPLEMENTATION" ):
                listener.exitDEF_IMPLEMENTATION(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDEF_IMPLEMENTATION" ):
                return visitor.visitDEF_IMPLEMENTATION(self)
            else:
                return visitor.visitChildren(self)



    def implementation_def(self):

        localctx = inmantaParser.Implementation_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_implementation_def)
        self._la = 0 # Token type
        try:
            localctx = inmantaParser.DEF_IMPLEMENTATIONContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(inmantaParser.T__8)
            self.state = 133
            self.match(inmantaParser.ID)
            self.state = 136
            _la = self._input.LA(1)
            if _la==inmantaParser.T__9:
                self.state = 134
                self.match(inmantaParser.T__9)
                self.state = 135
                self.class_ref()


            self.state = 138
            self.implementation()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IndexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return inmantaParser.RULE_index

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class INDEXContext(IndexContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a inmantaParser.IndexContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def class_ref(self):
            return self.getTypedRuleContext(inmantaParser.Class_refContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(inmantaParser.ID)
            else:
                return self.getToken(inmantaParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINDEX" ):
                listener.enterINDEX(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINDEX" ):
                listener.exitINDEX(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitINDEX" ):
                return visitor.visitINDEX(self)
            else:
                return visitor.visitChildren(self)



    def index(self):

        localctx = inmantaParser.IndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_index)
        self._la = 0 # Token type
        try:
            localctx = inmantaParser.INDEXContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(inmantaParser.T__10)
            self.state = 141
            self.class_ref()
            self.state = 142
            self.match(inmantaParser.T__11)
            self.state = 143
            self.match(inmantaParser.ID)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==inmantaParser.T__5:
                self.state = 144
                self.match(inmantaParser.T__5)
                self.state = 145
                self.match(inmantaParser.ID)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(inmantaParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Implement_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return inmantaParser.RULE_implement_def

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DEF_IMPLEMENTContext(Implement_defContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a inmantaParser.Implement_defContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def class_ref(self):
            return self.getTypedRuleContext(inmantaParser.Class_refContext,0)

        def ns_ref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(inmantaParser.Ns_refContext)
            else:
                return self.getTypedRuleContext(inmantaParser.Ns_refContext,i)

        def expression(self):
            return self.getTypedRuleContext(inmantaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDEF_IMPLEMENT" ):
                listener.enterDEF_IMPLEMENT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDEF_IMPLEMENT" ):
                listener.exitDEF_IMPLEMENT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDEF_IMPLEMENT" ):
                return visitor.visitDEF_IMPLEMENT(self)
            else:
                return visitor.visitChildren(self)



    def implement_def(self):

        localctx = inmantaParser.Implement_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_implement_def)
        self._la = 0 # Token type
        try:
            localctx = inmantaParser.DEF_IMPLEMENTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(inmantaParser.T__13)
            self.state = 154
            self.class_ref()
            self.state = 155
            self.match(inmantaParser.T__14)
            self.state = 156
            self.ns_ref()
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==inmantaParser.T__5:
                self.state = 157
                self.match(inmantaParser.T__5)
                self.state = 158
                self.ns_ref()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            _la = self._input.LA(1)
            if _la==inmantaParser.T__15:
                self.state = 164
                self.match(inmantaParser.T__15)
                self.state = 165
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Relation_endContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_ref(self):
            return self.getTypedRuleContext(inmantaParser.Class_refContext,0)


        def ID(self):
            return self.getToken(inmantaParser.ID, 0)

        def getRuleIndex(self):
            return inmantaParser.RULE_relation_end

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelation_end" ):
                listener.enterRelation_end(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelation_end" ):
                listener.exitRelation_end(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelation_end" ):
                return visitor.visitRelation_end(self)
            else:
                return visitor.visitChildren(self)




    def relation_end(self):

        localctx = inmantaParser.Relation_endContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_relation_end)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.class_ref()
            self.state = 169
            self.match(inmantaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Relation_linkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return inmantaParser.RULE_relation_link

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelation_link" ):
                listener.enterRelation_link(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelation_link" ):
                listener.exitRelation_link(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelation_link" ):
                return visitor.visitRelation_link(self)
            else:
                return visitor.visitChildren(self)




    def relation_link(self):

        localctx = inmantaParser.Relation_linkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_relation_link)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << inmantaParser.T__16) | (1 << inmantaParser.T__17) | (1 << inmantaParser.T__18))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Multiplicity_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return inmantaParser.RULE_multiplicity_body

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UPPERContext(Multiplicity_bodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a inmantaParser.Multiplicity_bodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(inmantaParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUPPER" ):
                listener.enterUPPER(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUPPER" ):
                listener.exitUPPER(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUPPER" ):
                return visitor.visitUPPER(self)
            else:
                return visitor.visitChildren(self)


    class LOWERContext(Multiplicity_bodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a inmantaParser.Multiplicity_bodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(inmantaParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLOWER" ):
                listener.enterLOWER(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLOWER" ):
                listener.exitLOWER(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLOWER" ):
                return visitor.visitLOWER(self)
            else:
                return visitor.visitChildren(self)


    class FIXEDContext(Multiplicity_bodyContext):
